remove col unnamed

--- a/notebook/01_cleaning_pipeline.ipynb
+++ b/notebook/01_cleaning_pipeline.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -102,16 +102,15 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 13854 entries, 0 to 13853\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column      Non-Null Count  Dtype \n",
-      "---  ------      --------------  ----- \n",
-      " 0   unnamed:_0  13854 non-null  int64 \n",
-      " 1   title       13854 non-null  object\n",
-      " 2   poem        13854 non-null  object\n",
-      " 3   poet        13854 non-null  object\n",
-      " 4   tags        12899 non-null  object\n",
-      "dtypes: int64(1), object(4)\n",
-      "memory usage: 541.3+ KB\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   title   13854 non-null  object\n",
+      " 1   poem    13854 non-null  object\n",
+      " 2   poet    13854 non-null  object\n",
+      " 3   tags    12899 non-null  object\n",
+      "dtypes: object(4)\n",
+      "memory usage: 433.1+ KB\n",
       "None\n"
      ]
     },
@@ -136,7 +135,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>unnamed:_0</th>\n",
        "      <th>title</th>\n",
        "      <th>poem</th>\n",
        "      <th>poet</th>\n",
@@ -146,10 +144,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>\\r\\r\\n                    Objects Used to Prop Open a Window\\r\\r\\n</td>\n",
        "      <td>\\r\\r\\nDog bone, stapler,\\r\\r\\ncribbage board, garlic press\\r\\r\\n     because this window is loose—lacks\\r\\r\\nsuction, lacks grip.\\r\\r\\nBungee cord, bootstrap,\\r\\r\\ndog leash, leather belt\\r\\r\\n     because this window had sash cords.\\r\\r\\nThey frayed. They broke.\\r\\r\\nFeather duster, thatch of straw, empty\\r\\r\\nbottle of Elmer's glue\\r\\r\\n     because this window is loud—its hinges clack\\r\\r\\nopen, clack shut.\\r\\r\\nStuffed bear, baby blanket,\\r\\r\\nsingle crib newel\\r\\r\\n     because this window is split. It's dividing\\r\\r\\nin two.\\r\\r\\nVelvet moss, sagebrush,\\r\\r\\nwillow branch, robin's wing\\r\\r\\n     because this window, it's pane-less. It's only\\r\\r\\na frame of air.\\r\\r\\n</td>\n",
        "      <td>Michelle Menting</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>\\r\\r\\n                    The New Church\\r\\r\\n</td>\n",
+       "      <td>\\r\\r\\nThe old cupola glinted above the clouds, shone\\r\\r\\namong fir trees, but it took him an hour\\r\\r\\nfor the half mile all the way up the hill. As he trailed,\\r\\r\\nthe village passed him by, greeted him,\\r\\r\\nasked about his health, but everybody hurried\\r\\r\\nto catch the mass, left him leaning against fences,\\r\\r\\nmeasuring the road with the walking stick he sculpted.\\r\\r\\nHe yearned for the day when the new church\\r\\r\\nwould be built—right across the road. Now\\r\\r\\nit rises above the moon: saints in frescoes\\r\\r\\nmeet the eye, and only the rain has started to cut\\r\\r\\nthrough the shingles on the roof of his empty\\r\\r\\nhouse. The apple trees have taken over the sky,\\r\\r\\nsequestered the gate, sidled over the porch.\\r\\r\\n</td>\n",
+       "      <td>Lucia Cherciu</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\\r\\r\\n                    Look for Me\\r\\r\\n</td>\n",
+       "      <td>\\r\\r\\nLook for me under the hood\\r\\r\\nof that old Chevrolet settled in weeds\\r\\r\\nat the end of the pasture.\\r\\r\\nI'm the radiator that spent its years\\r\\r\\nbolted in front of an engine\\r\\r\\nshoving me forward into the wind.\\r\\r\\nWhatever was in me in those days\\r\\r\\nhas mostly leaked away,\\r\\r\\nbut my cap's still screwed on tight\\r\\r\\nand I know the names of all these\\r\\r\\ntattered moths and broken grasshoppers\\r\\r\\nthe rest of you've forgotten.\\r\\r\\n</td>\n",
+       "      <td>Ted Kooser</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -157,17 +168,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   unnamed:_0  \\\n",
-       "0           0   \n",
-       "\n",
        "                                                                                title  \\\n",
        "0  \\r\\r\\n                    Objects Used to Prop Open a Window\\r\\r\\n                   \n",
+       "1                      \\r\\r\\n                    The New Church\\r\\r\\n                   \n",
+       "2                         \\r\\r\\n                    Look for Me\\r\\r\\n                   \n",
        "\n",
-       "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         poem  \\\n",
-       "0  \\r\\r\\nDog bone, stapler,\\r\\r\\ncribbage board, garlic press\\r\\r\\n     because this window is loose—lacks\\r\\r\\nsuction, lacks grip.\\r\\r\\nBungee cord, bootstrap,\\r\\r\\ndog leash, leather belt\\r\\r\\n     because this window had sash cords.\\r\\r\\nThey frayed. They broke.\\r\\r\\nFeather duster, thatch of straw, empty\\r\\r\\nbottle of Elmer's glue\\r\\r\\n     because this window is loud—its hinges clack\\r\\r\\nopen, clack shut.\\r\\r\\nStuffed bear, baby blanket,\\r\\r\\nsingle crib newel\\r\\r\\n     because this window is split. It's dividing\\r\\r\\nin two.\\r\\r\\nVelvet moss, sagebrush,\\r\\r\\nwillow branch, robin's wing\\r\\r\\n     because this window, it's pane-less. It's only\\r\\r\\na frame of air.\\r\\r\\n   \n",
+       "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             poem  \\\n",
+       "0                                                      \\r\\r\\nDog bone, stapler,\\r\\r\\ncribbage board, garlic press\\r\\r\\n     because this window is loose—lacks\\r\\r\\nsuction, lacks grip.\\r\\r\\nBungee cord, bootstrap,\\r\\r\\ndog leash, leather belt\\r\\r\\n     because this window had sash cords.\\r\\r\\nThey frayed. They broke.\\r\\r\\nFeather duster, thatch of straw, empty\\r\\r\\nbottle of Elmer's glue\\r\\r\\n     because this window is loud—its hinges clack\\r\\r\\nopen, clack shut.\\r\\r\\nStuffed bear, baby blanket,\\r\\r\\nsingle crib newel\\r\\r\\n     because this window is split. It's dividing\\r\\r\\nin two.\\r\\r\\nVelvet moss, sagebrush,\\r\\r\\nwillow branch, robin's wing\\r\\r\\n     because this window, it's pane-less. It's only\\r\\r\\na frame of air.\\r\\r\\n   \n",
+       "1  \\r\\r\\nThe old cupola glinted above the clouds, shone\\r\\r\\namong fir trees, but it took him an hour\\r\\r\\nfor the half mile all the way up the hill. As he trailed,\\r\\r\\nthe village passed him by, greeted him,\\r\\r\\nasked about his health, but everybody hurried\\r\\r\\nto catch the mass, left him leaning against fences,\\r\\r\\nmeasuring the road with the walking stick he sculpted.\\r\\r\\nHe yearned for the day when the new church\\r\\r\\nwould be built—right across the road. Now\\r\\r\\nit rises above the moon: saints in frescoes\\r\\r\\nmeet the eye, and only the rain has started to cut\\r\\r\\nthrough the shingles on the roof of his empty\\r\\r\\nhouse. The apple trees have taken over the sky,\\r\\r\\nsequestered the gate, sidled over the porch.\\r\\r\\n   \n",
+       "2                                                                                                                                                                                                                                                                                        \\r\\r\\nLook for me under the hood\\r\\r\\nof that old Chevrolet settled in weeds\\r\\r\\nat the end of the pasture.\\r\\r\\nI'm the radiator that spent its years\\r\\r\\nbolted in front of an engine\\r\\r\\nshoving me forward into the wind.\\r\\r\\nWhatever was in me in those days\\r\\r\\nhas mostly leaked away,\\r\\r\\nbut my cap's still screwed on tight\\r\\r\\nand I know the names of all these\\r\\r\\ntattered moths and broken grasshoppers\\r\\r\\nthe rest of you've forgotten.\\r\\r\\n   \n",
        "\n",
        "               poet tags  \n",
-       "0  Michelle Menting  NaN  "
+       "0  Michelle Menting  NaN  \n",
+       "1     Lucia Cherciu  NaN  \n",
+       "2        Ted Kooser  NaN  "
       ]
      },
      "metadata": {},
@@ -187,7 +201,11 @@
     "    \n",
     "setup:Dict = dict(sep=Constant.SEP, encoding=Constant.ENCODING)\n",
     "\n",
-    "poetry_df: PandasDF = pd.read_csv(poetry_fundation_data, **setup)\n",
+    "poetry_df: PandasDF = pd.read_csv(\n",
+    "    poetry_fundation_data,\n",
+    "    usecols=lambda col: 'unnamed' not in col.lower(),\n",
+    "    **setup\n",
+    ")\n",
     "poetry_df.columns = (\n",
     "    poetry_df.columns\n",
     "    .str.strip()\n",
