--- a/notebook/01_cleaning_pipeline.ipynb
+++ b/notebook/01_cleaning_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +44,7 @@
     "\n",
     "# stat\n",
     "from scipy import stats\n",
+    "from nltk.stem.porter import PorterStemmer\n",
     "\n",
     "# statsmodels\n",
     "from statsmodels.stats.multicomp import pairwise_tukeyhsd\n",
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,12 +84,13 @@
     "# nlp load\n",
     "# python -m spacy download en_core_web_sm\n",
     "# python -m spacy download en_core_web_lg\n",
-    "nlp = spacy.load(\"en_core_web_lg\")"
+    "nlp = spacy.load(\"en_core_web_lg\")\n",
+    "ps = PorterStemmer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +249,7 @@
     "    \"\"\"Remueve las stopwords del texto.\"\"\"\n",
     "    doc = nlp(text)\n",
     "    tokens = [\n",
-    "        token.text \n",
+    "        ps.stem(token.text)\n",
     "        for token in doc\n",
     "        if not token.is_stop \n",
     "        and token.is_alpha \n",
@@ -271,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -327,15 +329,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>invisible fish</td>\n",
-       "      <td>invisible fish swim ghost ocean describe wave sand waterworn rock soon fish learn walk human come ashore paint dream die stone later later ocean floor punctuate chevy truck carry dreamer decendant go store</td>\n",
+       "      <td>invis fish</td>\n",
+       "      <td>invis fish swim ghost ocean describ wave sand waterworn rock soon fish learn walk human come ashor paint dream die stone later later ocean floor punctuat chevi truck carri dreamer decend go store</td>\n",
        "      <td>joy harjo</td>\n",
        "      <td>Living,Time &amp; Brevity,Relationships,Family &amp; Ancestors,Nature,Landscapes &amp; Pastorals,Seas, Rivers, &amp; Streams,Social Commentaries,History &amp; Politics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>not bother earth spirit</td>\n",
-       "      <td>not bother earth spirit live work story old story world delicate change see watch invite coffee warm bread obligate stay listen ordinary story endure earthquake lightning death love blind beauty story compelling want leave trap stone finger escape</td>\n",
+       "      <td>not bother earth spirit live work stori oldest stori world delic chang see watch invit coffe warm bread oblig stay listen ordinari stori endur earthquak lightn death love blind beauti stori compel want leav trap stone finger escap</td>\n",
        "      <td>joy harjo</td>\n",
        "      <td>Religion,The Spiritual,Mythology &amp; Folklore,Fairy-tales &amp; Legends</td>\n",
        "    </tr>\n",
@@ -345,12 +347,12 @@
       ],
       "text/plain": [
        "                     title  \\\n",
-       "0           invisible fish   \n",
+       "0               invis fish   \n",
        "1  not bother earth spirit   \n",
        "\n",
-       "                                                                                                                                                                                                                                                      poem  \\\n",
-       "0                                            invisible fish swim ghost ocean describe wave sand waterworn rock soon fish learn walk human come ashore paint dream die stone later later ocean floor punctuate chevy truck carry dreamer decendant go store   \n",
-       "1  not bother earth spirit live work story old story world delicate change see watch invite coffee warm bread obligate stay listen ordinary story endure earthquake lightning death love blind beauty story compelling want leave trap stone finger escape   \n",
+       "                                                                                                                                                                                                                                     poem  \\\n",
+       "0                                     invis fish swim ghost ocean describ wave sand waterworn rock soon fish learn walk human come ashor paint dream die stone later later ocean floor punctuat chevi truck carri dreamer decend go store   \n",
+       "1  not bother earth spirit live work stori oldest stori world delic chang see watch invit coffe warm bread oblig stay listen ordinari stori endur earthquak lightn death love blind beauti stori compel want leav trap stone finger escap   \n",
        "\n",
        "        poet  \\\n",
        "0  joy harjo   \n",
@@ -371,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
