--- a/notebook/01_cleaning_pipeline.ipynb
+++ b/notebook/01_cleaning_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -16,6 +16,7 @@
    ],
    "source": [
     "from __future__ import annotations\n",
+    "import sys; sys.path.insert(0, '..')\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -37,6 +38,9 @@
     "from itertools import combinations\n",
     "from wordcloud import WordCloud\n",
     "\n",
+    "# utils\n",
+    "from utils import Constants\n",
+    "\n",
     "# text\n",
     "import re\n",
     "import spacy\n",
@@ -48,7 +52,6 @@
     "\n",
     "# statsmodels\n",
     "from statsmodels.stats.multicomp import pairwise_tukeyhsd\n",
-    "\n",
     "\n",
     "# typings\n",
     "from pandas import DataFrame as PandasDF\n",
@@ -66,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,24 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@dataclass(frozen=True)\n",
-    "class Constant:\n",
-    "    SEP:str = ','\n",
-    "    ENCODING:str = 'utf-8'\n",
-    "    EMPTY_STR:str = ''\n",
-    "    SPACE_STR:str = ' '\n",
-    "    PIPE_STR:str = '|'\n",
-    "    ONE:int = 1\n",
-    "    ZERO:int = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +193,7 @@
     "        ''')\n",
     "    )\n",
     "    \n",
-    "setup:Dict = dict(sep=Constant.SEP, encoding=Constant.ENCODING)\n",
+    "setup:Dict = dict(sep=Constants.SEP, encoding=Constants.ENCODING)\n",
     "\n",
     "poetry_df: PandasDF = (\n",
     "    pd.read_csv(\n",
@@ -232,17 +218,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean(text:str)->str:\n",
     "    \"\"\"Limpia el texto de caracteres especiales y espacios extras.\"\"\"\n",
     "    text = unidecode.unidecode(text)\n",
-    "    text = re.sub(r'http\\S+', Constant.EMPTY_STR, text)  # remove URLs\n",
-    "    text = re.sub(r'www\\S+', Constant.EMPTY_STR, text)   # remove URLs\n",
-    "    text = re.sub(r'[^A-Za-z0-9\\s]', Constant.EMPTY_STR, text)  # remove special chars\n",
-    "    text = re.sub(r'\\s+', Constant.SPACE_STR, text).strip()  # remove extra spaces\n",
+    "    text = re.sub(r'http\\S+', Constants.EMPTY_STR, text)  # remove URLs\n",
+    "    text = re.sub(r'www\\S+', Constants.EMPTY_STR, text)   # remove URLs\n",
+    "    text = re.sub(r'[^A-Za-z0-9\\s]', Constants.EMPTY_STR, text)  # remove special chars\n",
+    "    text = re.sub(r'[\\[\\]\\\"]', Constants.EMPTY_STR, text)  # remove brackets and quotes\n",
+    "    text = re.sub(r'\\d+', Constants.EMPTY_STR, text)  # remove digits\n",
+    "    text = re.sub(r'\\s+', Constants.SPACE_STR, text).strip()  # remove extra spaces\n",
     "    return text.lower()\n",
     "\n",
     "def remove_stopwords(text:str)->str:\n",
@@ -255,13 +243,13 @@
     "        and token.is_alpha \n",
     "        and not token.is_punct\n",
     "    ]\n",
-    "    return Constant.SPACE_STR.join(tokens)\n",
+    "    return Constants.SPACE_STR.join(tokens)\n",
     "\n",
     "def lematize(text:str)->str:\n",
     "    \"\"\"Lematiza el texto.\"\"\"\n",
     "    doc = nlp(text)\n",
     "    tokens = [token.lemma_ for token in doc]\n",
-    "    return Constant.SPACE_STR.join(tokens)\n",
+    "    return Constants.SPACE_STR.join(tokens)\n",
     "\n",
     "def preprocess(text:str)->str:\n",
     "    \"\"\"Preprocesa el texto.\"\"\"\n",
@@ -273,30 +261,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def preprocess_tags(tags_column: pd.Series) -> pd.Series:\n",
+    "    \"\"\"Procesa la columna completa de etiquetas.\"\"\"\n",
+    "    list_of_lists = tags_column.apply(\n",
+    "        lambda x: [clean(tag) for tag in x.split(Constants.COMMA_STR)]\n",
+    "    )\n",
+    "    \n",
+    "    # 2. Opcional: Eliminar cualquier cadena vacía resultante de la limpieza\n",
+    "    list_of_lists = list_of_lists.apply(\n",
+    "        lambda tags: [tag for tag in tags if tag]\n",
+    "    )\n",
+    "    \n",
+    "    return list_of_lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "setup_load:Dict = dict(\n",
+    "    sep=Constants.PIPE_STR,\n",
+    "    quotechar='\"',\n",
+    "    quoting=csv.QUOTE_NONNUMERIC,\n",
+    "    encoding=Constants.ENCODING\n",
+    ")\n",
+    "\n",
     "if not poetry_fundation_cleaned.is_file():\n",
-    "    for col in poetry_df.select_dtypes(include=object).columns[:-1]:\n",
-    "        poetry_df[col] = poetry_df[col].astype(str).apply(preprocess)\n",
+    "    object_cols = poetry_df.select_dtypes(include=object).columns\n",
+    "    cols_to_process = object_cols[:-1]\n",
+    "    \n",
+    "    poetry_df[cols_to_process] = (\n",
+    "        poetry_df[cols_to_process]\n",
+    "        .apply(lambda col: col.astype(str).apply(preprocess))\n",
+    "    )\n",
+    "    \n",
+    "    poetry_df['tags'] = preprocess_tags(poetry_df['tags'])\n",
+    "    \n",
+    "    # 3. FILTRADO O MANEJO DE NULOS\n",
+    "    # La solución más común es eliminar filas donde la columna principal (ej. 'poem') es nula\n",
+    "    poetry_df = poetry_df.dropna(subset=['poem']).reset_index(drop=True)\n",
+    "    \n",
     "else:\n",
     "    poetry_df: PandasDF = (\n",
     "        pd.read_csv(\n",
     "            poetry_fundation_cleaned,\n",
-    "            sep=Constant.PIPE_STR,\n",
-    "            quotechar='\"',\n",
-    "            quoting=csv.QUOTE_NONNUMERIC,\n",
-    "            encoding=Constant.ENCODING\n",
+    "            **setup_load\n",
     "        )\n",
-    "        .dropna()\n",
-    "        .reset_index(drop=True)\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -332,14 +354,14 @@
        "      <td>invis fish</td>\n",
        "      <td>invis fish swim ghost ocean describ wave sand waterworn rock soon fish learn walk human come ashor paint dream die stone later later ocean floor punctuat chevi truck carri dreamer decend go store</td>\n",
        "      <td>joy harjo</td>\n",
-       "      <td>Living,Time &amp; Brevity,Relationships,Family &amp; Ancestors,Nature,Landscapes &amp; Pastorals,Seas, Rivers, &amp; Streams,Social Commentaries,History &amp; Politics</td>\n",
+       "      <td>[living, time brevity, relationships, family ancestors, nature, landscapes pastorals, seas, rivers, streams, social commentaries, history politics]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>not bother earth spirit</td>\n",
        "      <td>not bother earth spirit live work stori oldest stori world delic chang see watch invit coffe warm bread oblig stay listen ordinari stori endur earthquak lightn death love blind beauti stori compel want leav trap stone finger escap</td>\n",
        "      <td>joy harjo</td>\n",
-       "      <td>Religion,The Spiritual,Mythology &amp; Folklore,Fairy-tales &amp; Legends</td>\n",
+       "      <td>[religion, the spiritual, mythology folklore, fairytales legends]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -359,8 +381,8 @@
        "1  joy harjo   \n",
        "\n",
        "                                                                                                                                                  tags  \n",
-       "0  Living,Time & Brevity,Relationships,Family & Ancestors,Nature,Landscapes & Pastorals,Seas, Rivers, & Streams,Social Commentaries,History & Politics  \n",
-       "1                                                                                    Religion,The Spiritual,Mythology & Folklore,Fairy-tales & Legends  "
+       "0  [living, time brevity, relationships, family ancestors, nature, landscapes pastorals, seas, rivers, streams, social commentaries, history politics]  \n",
+       "1                                                                                    [religion, the spiritual, mythology folklore, fairytales legends]  "
       ]
      },
      "metadata": {},
@@ -373,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,12 +403,16 @@
     "    poetry_df.to_csv(\n",
     "        str(poetry_fundation_cleaned), \n",
     "        index=False,\n",
-    "        sep=Constant.PIPE_STR,\n",
-    "        quotechar='\"',\n",
-    "        quoting=csv.QUOTE_NONNUMERIC,\n",
-    "        encoding=Constant.ENCODING\n",
+    "        **setup_load\n",
     "    )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
