unused removed packages

--- a/notebook/03_embeddings_supervised.ipynb
+++ b/notebook/03_embeddings_supervised.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,6 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import session_info\n",
     "\n",
     "from pathlib import Path\n",
     "from inspect import cleandoc\n",
@@ -49,7 +48,7 @@
     "\n",
     "# typings\n",
     "from pandas import DataFrame as PandasDF\n",
-    "from typing import List, Dict, Union\n",
+    "from typing import Dict\n",
     "\n",
     "# warnings\n",
     "import warnings\n",
