--- a/notebook/01_cleaning_pipeline.ipynb
+++ b/notebook/01_cleaning_pipeline.ipynb
@@ -47,12 +47,10 @@
     "from scipy import stats\n",
     "from nltk.stem.porter import PorterStemmer\n",
     "\n",
-    "# statsmodels\n",
-    "from statsmodels.stats.multicomp import pairwise_tukeyhsd\n",
     "\n",
     "# typings\n",
     "from pandas import DataFrame as PandasDF\n",
-    "from typing import List, Dict, Union\n",
+    "from typing import Dict\n",
     "\n",
     "# setup\n",
     "plt.style.use('seaborn-v0_8')\n",
