--- a/notebook/02_embeddings_unsupervised.ipynb
+++ b/notebook/02_embeddings_unsupervised.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "# utils\n",
     "from utils import Constants\n",
-    "\n",
+    "from modules.preprocesing import preprocess\n",
     "\n",
     "# text\n",
     "import re\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,12 +79,13 @@
     "# rutas absolutas\n",
     "here: Path = Path.cwd().absolute().parent\n",
     "data: Path = here / 'data'\n",
-    "poetry_fundation_cleaned: Path = data / 'CleanedPoetryFoundationData.csv'"
+    "poetry_fundation_cleaned: Path = data / 'CleanedPoetryFoundationData.csv'\n",
+    "cv_poetry: Path = data / 'vallejo_poems_en.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
     "    encoding=Constants.ENCODING\n",
     ")\n",
     "\n",
-    "if not poetry_fundation_cleaned.is_file():\n",
+    "if not poetry_fundation_cleaned.is_file() or not cv_poetry.is_file():\n",
     "    raise FileNotFoundError(\n",
     "        cleandoc(f'''\n",
     "        El archivo {poetry_fundation_cleaned} no existe.\n",
@@ -112,7 +113,177 @@
     "    )\n",
     ")\n",
     "\n",
+    "cv_df: PandasDF = (\n",
+    "        pd.read_csv(\n",
+    "        str(cv_poetry), \n",
+    "        **setup_load\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "cv_df[['title', 'poem']] = (\n",
+    "        cv_df[['title', 'poem']]\n",
+    "        .apply(lambda col: col.astype(str).apply(preprocess))\n",
+    "    )\n",
+    "\n",
     "poetry_df = poetry_df.loc[~poetry_df.poem.isna(),:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>poem</th>\n",
+       "      <th>poet</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>invis fish</td>\n",
+       "      <td>invis fish swim ghost ocean describ wave sand waterworn rock soon fish learn walk human come ashor paint dream die stone later later ocean floor punctuat chevi truck carri dreamer decend go store</td>\n",
+       "      <td>joy harjo</td>\n",
+       "      <td>['living', 'time brevity', 'relationships', 'family ancestors', 'nature', 'landscapes pastorals', 'seas', 'rivers', 'streams', 'social commentaries', 'history politics']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>not bother earth spirit</td>\n",
+       "      <td>not bother earth spirit live work stori oldest stori world delic chang see watch invit coffe warm bread oblig stay listen ordinari stori endur earthquak lightn death love blind beauti stori compel want leav trap stone finger escap</td>\n",
+       "      <td>joy harjo</td>\n",
+       "      <td>['religion', 'the spiritual', 'mythology folklore', 'fairytales legends']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>hour consid hydrangea</td>\n",
+       "      <td>hour consid hydrangea salt sand plant variet question variet diet mother know pound feel like lose lose ye sens possibl beauti grow extern extern beauti beauti occur surfac plant sun darken skin child small beauti obviou beauti hand swell bite spread insect venom small appear feel smash skull floor scream hold lap kitchen floor open freezer press pack frozen clay forehead like cold obviou hydrangea walk push child stroller walk push haul lift have bodi adjunct bodi compos errand weight tender small power imagin feel small weight pound like interf twitch muscl bodi object mother confus middleag mother littl spare flesh feel inch major muscl pull graviti weight child sleep hour think hydrangea let man look stop brush drowsi child littl eye face bare consid mother consid miss subtl power differenti time mass apprehen</td>\n",
+       "      <td>simon white</td>\n",
+       "      <td>['living', 'parenthood', 'the body', 'the mind', 'nature', 'trees flowers']</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     title  \\\n",
+       "0               invis fish   \n",
+       "1  not bother earth spirit   \n",
+       "2    hour consid hydrangea   \n",
+       "\n",
+       "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        poem  \\\n",
+       "0                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        invis fish swim ghost ocean describ wave sand waterworn rock soon fish learn walk human come ashor paint dream die stone later later ocean floor punctuat chevi truck carri dreamer decend go store   \n",
+       "1                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     not bother earth spirit live work stori oldest stori world delic chang see watch invit coffe warm bread oblig stay listen ordinari stori endur earthquak lightn death love blind beauti stori compel want leav trap stone finger escap   \n",
+       "2  hour consid hydrangea salt sand plant variet question variet diet mother know pound feel like lose lose ye sens possibl beauti grow extern extern beauti beauti occur surfac plant sun darken skin child small beauti obviou beauti hand swell bite spread insect venom small appear feel smash skull floor scream hold lap kitchen floor open freezer press pack frozen clay forehead like cold obviou hydrangea walk push child stroller walk push haul lift have bodi adjunct bodi compos errand weight tender small power imagin feel small weight pound like interf twitch muscl bodi object mother confus middleag mother littl spare flesh feel inch major muscl pull graviti weight child sleep hour think hydrangea let man look stop brush drowsi child littl eye face bare consid mother consid miss subtl power differenti time mass apprehen   \n",
+       "\n",
+       "          poet  \\\n",
+       "0    joy harjo   \n",
+       "1    joy harjo   \n",
+       "2  simon white   \n",
+       "\n",
+       "                                                                                                                                                                        tags  \n",
+       "0  ['living', 'time brevity', 'relationships', 'family ancestors', 'nature', 'landscapes pastorals', 'seas', 'rivers', 'streams', 'social commentaries', 'history politics']  \n",
+       "1                                                                                                  ['religion', 'the spiritual', 'mythology folklore', 'fairytales legends']  \n",
+       "2                                                                                                ['living', 'parenthood', 'the body', 'the mind', 'nature', 'trees flowers']  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(poetry_df.head(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>poem</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>black herald</td>\n",
+       "      <td>blow life power not know blow god hatr backlash suffer dam soul not know open dark furrow fierce face strong mayb hors barbar attila black herald death send deep abyss soul christ rever faith destini blasphem gori blow crackl bread burnsup oven door man poor poor turn eye slap shoulder call turn craze eye live dam like pond guilt gaze blow life power not know</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>black stone white stone</td>\n",
+       "      <td>shall die pari rainstorm day rememb shall die pari bother doubtless thursday like today autumn shall thursday today thursday line set shoulder evil like today turn head journey way cesar vallejo dead strike hit hard stick hard end rope wit thursday shoulder bone loneli rain road</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>pari octob poem</td>\n",
+       "      <td>leav bench away pant great situat action number split leav champ elyse strang alley moon make turn death goe away cradl leav surround peopl cut loo human resembl turn dispatch shadow away remain creat alibi shoe eyelet mud bend elbow button shirt</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     title  \\\n",
+       "0             black herald   \n",
+       "1  black stone white stone   \n",
+       "2          pari octob poem   \n",
+       "\n",
+       "                                                                                                                                                                                                                                                                                                                                                                        poem  \n",
+       "0  blow life power not know blow god hatr backlash suffer dam soul not know open dark furrow fierce face strong mayb hors barbar attila black herald death send deep abyss soul christ rever faith destini blasphem gori blow crackl bread burnsup oven door man poor poor turn eye slap shoulder call turn craze eye live dam like pond guilt gaze blow life power not know  \n",
+       "1                                                                                    shall die pari rainstorm day rememb shall die pari bother doubtless thursday like today autumn shall thursday today thursday line set shoulder evil like today turn head journey way cesar vallejo dead strike hit hard stick hard end rope wit thursday shoulder bone loneli rain road  \n",
+       "2                                                                                                                     leav bench away pant great situat action number split leav champ elyse strang alley moon make turn death goe away cradl leav surround peopl cut loo human resembl turn dispatch shadow away remain creat alibi shoe eyelet mud bend elbow button shirt  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(cv_df.head(3))"
    ]
   }
  ],
