--- a/notebook/03_embeddings_supervised.ipynb
+++ b/notebook/03_embeddings_supervised.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -23,6 +23,7 @@
     "\n",
     "# python\n",
     "import os\n",
+    "import ast\n",
     "import ssl\n",
     "import csv\n",
     "\n",
@@ -36,6 +37,7 @@
     "\n",
     "# utils\n",
     "from utils import Constants\n",
+    "from modules.preprocesing import preprocess\n",
     "\n",
     "# stat\n",
     "from sklearn.preprocessing import MultiLabelBinarizer\n",
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,12 +81,13 @@
     "# rutas absolutas\n",
     "here: Path = Path.cwd().absolute().parent\n",
     "data: Path = here / 'data'\n",
-    "poetry_fundation_cleaned: Path = data / 'CleanedPoetryFoundationData.csv'"
+    "poetry_fundation_cleaned: Path = data / 'CleanedPoetryFoundationData.csv'\n",
+    "cv_poetry: Path = data / 'vallejo_poems_en.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +98,7 @@
     "    encoding=Constants.ENCODING\n",
     ")\n",
     "\n",
-    "if not poetry_fundation_cleaned.is_file():\n",
+    "if not poetry_fundation_cleaned.is_file() or not cv_poetry.is_file():\n",
     "    raise FileNotFoundError(\n",
     "        cleandoc(f'''\n",
     "        El archivo {poetry_fundation_cleaned} no existe.\n",
@@ -112,25 +115,71 @@
     "    )\n",
     ")\n",
     "\n",
-    "poetry_df = poetry_df.loc[~poetry_df.poem.isna(),:]"
+    "cv_df: PandasDF = (\n",
+    "        pd.read_csv(\n",
+    "        str(cv_poetry), \n",
+    "        **setup_load\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "cv_df[['title', 'poem']] = (\n",
+    "        cv_df[['title', 'poem']]\n",
+    "        .apply(lambda col: col.astype(str).apply(preprocess))\n",
+    "    )\n",
+    "\n",
+    "poetry_df = poetry_df.loc[~poetry_df.poem.isna(),:]\n",
+    "poetry_df['tags'] = poetry_df['tags'].apply(ast.literal_eval)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Clases (etiquetas únicas): [' ' \"'\" ',' '[' ']' 'a' 'b' 'c' 'd' 'e' 'f' 'g' 'h' 'i' 'j' 'k' 'l' 'm'\n",
-      " 'n' 'o' 'p' 'q' 'r' 's' 't' 'u' 'v' 'w' 'x' 'y' 'z']\n",
+      "Clases (etiquetas únicas): ['activities' 'animals' 'anniversary' 'architecture design'\n",
+      " 'arts sciences' 'birth' 'birth birthdays' 'birthdays'\n",
+      " 'breakups vexed love' 'buddhism' 'christianity' 'christmas'\n",
+      " 'cinco de mayo' 'cities urban life' 'class' 'classic love'\n",
+      " 'coming of age' 'crime punishment' 'death' 'desire'\n",
+      " 'disappointment failure' 'easter' 'eating drinking' 'engagement'\n",
+      " 'fairytales legends' 'faith doubt' 'fall' 'family ancestors'\n",
+      " 'farewells good luck' 'fathers day' 'first love' 'friends enemies'\n",
+      " 'funerals' 'gardening' 'gay' 'gender sexuality' 'get well recovery'\n",
+      " 'ghosts the supernatural' 'god the divine' 'graduation'\n",
+      " 'gratitude apologies' 'greek roman mythology' 'growing old' 'halloween'\n",
+      " 'hanukkah' 'health illness' 'heartache loss' 'heavens'\n",
+      " 'heroes patriotism' 'history politics' 'home life' 'horror'\n",
+      " 'humor satire' 'independence day' 'indoor activities' 'infancy'\n",
+      " 'infatuation crushes' 'islam' 'jobs working' 'judaism' 'kwanzaa'\n",
+      " 'labor day' 'landscapes pastorals' 'language linguistics' 'lesbian'\n",
+      " 'life choices' 'living' 'love' 'marriage companionship' 'memorial day'\n",
+      " 'men women' 'midlife' 'money economics' 'mothers day' 'music'\n",
+      " 'mythology folklore' 'nature' 'new year' 'other religions'\n",
+      " 'painting sculpture' 'parenthood' 'passover' 'pets' 'philosophy'\n",
+      " 'photography film' 'planets' 'poetry poets' 'popular culture' 'queer'\n",
+      " 'race ethnicity' 'ramadan' 'reading books' 'realistic complicated'\n",
+      " 'relationships' 'religion' 'rivers' 'romantic love' 'rosh hashanah'\n",
+      " 'school learning' 'sciences' 'seas' 'separation divorce' 'september th'\n",
+      " 'social commentaries' 'sorrow grieving' 'sports outdoor activities'\n",
+      " 'spring' 'st patricks day' 'stars' 'streams' 'summer' 'thanksgiving'\n",
+      " 'the body' 'the mind' 'the spiritual' 'theater dance' 'time brevity'\n",
+      " 'toasts celebrations' 'town country life' 'travels journeys'\n",
+      " 'trees flowers' 'unrequited love' 'valentines day' 'war conflict'\n",
+      " 'weather' 'weddings' 'winter' 'yom kippur' 'youth']\n",
       "\n",
-      "Matriz Multilabel (primeras 3 filas):\n",
-      " [[1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 1 1 1 1 1 0 1 1 1 1 1 0 0 1 0]\n",
-      " [1 1 1 1 1 1 0 0 1 1 1 1 1 1 0 1 1 1 1 1 1 0 1 1 1 1 0 0 0 1 0]\n",
-      " [1 1 1 1 1 1 1 0 1 1 1 1 1 1 0 0 1 1 1 1 1 0 1 1 1 1 1 1 0 1 0]]\n"
+      "Matriz Multilabel (primeras 2 filas):\n",
+      " [[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0\n",
+      "  0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 1 0 0 0 0 0\n",
+      "  0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 1 0 0 0 0 1 0 0 1 0 0 0 0\n",
+      "  0 1 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0\n",
+      "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      "  0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      "  0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0]]\n"
      ]
     }
    ],
@@ -147,12 +196,12 @@
     "\n",
     "# Para ver las etiquetas (el orden de las columnas):\n",
     "print(\"Clases (etiquetas únicas):\", mlb.classes_)\n",
-    "print(\"\\nMatriz Multilabel (primeras 3 filas):\\n\", y_mlb[:3])"
+    "print(\"\\nMatriz Multilabel (primeras 2 filas):\\n\", y_mlb[:2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +220,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Jaccard Score (Micro): 0.8164\n"
+      "Jaccard Score (Micro): 0.1389\n"
      ]
     }
    ],
@@ -201,6 +250,93 @@
     "jaccard_micro = jaccard_score(y_test, y_pred, average='micro')\n",
     "\n",
     "print(f\"\\nJaccard Score (Micro): {jaccard_micro:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xcv = vectorizer.transform(cv_df.poem)\n",
+    "ycv_pred = mlb.inverse_transform(\n",
+    "    classifier.predict(Xcv)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>black herald</td>\n",
+       "      <td>[living]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>black stone white stone</td>\n",
+       "      <td>[living]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>pari octob poem</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>xiii</td>\n",
+       "      <td>[living]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     title      tags\n",
+       "0             black herald  [living]\n",
+       "1  black stone white stone  [living]\n",
+       "2          pari octob poem        []\n",
+       "3                     xiii  [living]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(dict(\n",
+    "    title=cv_df.title.values, \n",
+    "    tags=list(map(list,ycv_pred)))\n",
+    ")"
    ]
   }
  ],
